--- a/resources/views/blog/index.antlers.html
+++ b/resources/views/blog/index.antlers.html
@@ -1,21 +1,29 @@
 <div class="max-w-4xl mx-auto">
     <h1 class="text-8xl font-black text-center">{{ title }}</h1>
-    <div class="grid grid-flow-col grid-cols-2 gap-8 mt-16">
-        {{ collection:blog }}
-            <a href="{{ url }}" class="w-full h-full border-gray-400 shadow hover:shadow-lg transition rounded">
-                <img src="https://source.unsplash.com/random/1920x1080/?sailing" alt="" class="rounded-t">
-
-                <article class="p-4">
-                    <div class="flex items-center">
-                        <img src="https://randomuser.me/api/portraits/women/51.jpg" alt="" class="h-12 w-12 rounded-full" />
-                        <div class="landing-tight ml-3">
-                            <p class="font-bold">Author Name</p>
-                            <p class="text-sm text-gray-600">2021-12-23</p>
+        {{ collection:blog paginate="4" as="posts" }}
+            <div class="grid grid-flow-row grid-cols-2 gap-8 mt-16">
+                {{ posts }}
+                <a href="{{ url }}" class="w-full h-full border-gray-400 shadow hover:shadow-lg transition rounded-lg">
+                    <img src="{{ featured_image }}" alt="{{ featured_image:alt }}" class="rounded-t">
+                    <article class="p-4">
+                        <div class="flex items-center">
+                            <img src="{{ author:avatar }}" alt="" class="h-12 w-12 rounded-full" />
+                            <div class="landing-tight ml-3">
+                                <p class="font-bold">{{ author:name }}</p>
+                                <p class="text-sm text-gray-600">{{ date }}</p>
+                            </div>
                         </div>
-                    </div>
-                    <h2 class="text-2xl font-bold leading-tight mt-4">Where Can I Buy a Good Placeholder Title on Sail?</h2>
-                </article>
-            </a>
-        {{ collection:blog }}
-    </div>
+                        <h2 class="text-2xl font-bold leading-tight mt-4">{{ title }}</h2>
+                    </article>
+                </a>
+                {{ /posts }}
+
+            </div>
+            {{ paginate }}
+                <div class="flex items-center justify-center space-x-8 my-16">
+                    <a href="{{ prev_page }}">&laquo; Previous</a>
+                    <a href="{{ next_page }}">Next &raquo</a>
+                </div>
+            {{ /paginate }}
+        {{ /collection:blog }}
 </div>
