--- a/resources/views/blog/index.antlers.html
+++ b/resources/views/blog/index.antlers.html
@@ -3,21 +3,8 @@
         {{ collection:blog paginate="4" as="posts" }}
             <div class="grid grid-flow-row grid-cols-2 gap-8 mt-16">
                 {{ posts }}
-                <a href="{{ url }}" class="w-full h-full border-gray-400 shadow hover:shadow-lg transition rounded-lg">
-                    <img src="{{ featured_image }}" alt="{{ featured_image:alt }}" class="rounded-t">
-                    <article class="p-4">
-                        <div class="flex items-center">
-                            <img src="{{ author:avatar }}" alt="" class="h-12 w-12 rounded-full" />
-                            <div class="landing-tight ml-3">
-                                <p class="font-bold">{{ author:name }}</p>
-                                <p class="text-sm text-gray-600">{{ date }}</p>
-                            </div>
-                        </div>
-                        <h2 class="text-2xl font-bold leading-tight mt-4">{{ title }}</h2>
-                    </article>
-                </a>
+                    {{ partial:blog/card }}
                 {{ /posts }}
-
             </div>
             {{ paginate }}
                 <div class="flex items-center justify-center space-x-8 my-16">
