--- a/resources/views/blog/show.antlers.html
+++ b/resources/views/blog/show.antlers.html
@@ -15,11 +15,11 @@
     {{ if related_posts }}
     <aside class="border-t-8 border-black my-24 py-8 max-w-2xl mx-auto">
         <h3 class="text-2xl font-black">Related Posts</h3>
-        <ul class="text-lg font-bold space-y-2 my-8">
+        <div class="grid grid-flow-row grid-cols-2 gap-8 mt-16">
             {{ related_posts }}
-            <li><a href="{{ url }}" class="text-red-700 hover:text-black">{{ title }}</a></li>
+                {{ partial:blog/card hide_image="true" }}
             {{ /related_posts }}
-        </ul>
+        </div>
     </aside>
     {{ /if }}
 </div>
