Add some field for tag

--- a/resources/views/tags/index.antlers.html
+++ b/resources/views/tags/index.antlers.html
@@ -1,6 +1,6 @@
 <div class="max-w-4xl mx-auto">
     <h1 class="text-8xl font-black text-center mb-16">{{ title }}</h1>
     {{ tags }}
-        <h2><a href="{{ url }}" class="text-4xl font-black text-red-700 hover:underline mt  -16">{{ title }}</a></h2>
+        <h2><a href="{{ url }}" class="text-4xl font-black text-red-700 hover:underline mt-16"> {{ emoji }} {{ title }}</a></h2>
     {{ /tags }}
 </div>
