--- a/resources/views/tags/show.antlers.html
+++ b/resources/views/tags/show.antlers.html
@@ -1,5 +1,8 @@
 <div class="max-w-4xl mx-auto">
-    <h1 class="text-8xl font-black text-center">{{ title }}</h1>
+    <h1 class="text-8xl font-black text-center">{{ emoji }} {{ title }} {{ emoji }}</h1>
+
+    <div class="my-8 font-bold text-center">{{ content }}</div>
+
     {{ entries paginate="4" as="posts" }}
     <div class="grid grid-flow-row grid-cols-2 gap-8 mt-16">
         {{ posts }}
