--- a/resources/views/_nav.antlers.html
+++ b/resources/views/_nav.antlers.html
@@ -1,6 +1,6 @@
-<nav class="py-12 max-w-4xl mx-auto">
+<nav class="py-12 max-w-7xl mx-auto">
     <div class="flex items-center">
-        <a href="/" class="font-bold text-2xl">Statamic Demo</a>
+        <a href="/" class="font-bold text-2xl">Curder</a>
         <div class="flex flex-1 justify-end items-center">
             <ul class="flex items-center space-x-8 font-semibold">
                 {{ nav:collection:pages }}
