--- a/resources/views/blog/show.antlers.html
+++ b/resources/views/blog/show.antlers.html
@@ -1,4 +1,4 @@
-<div class="max-w-2xl mx-auto">
+<div class="max-w-7xl mx-auto">
     <h1 class="text-6xl font-black leading-none text-left">{{ title }}</h1>
     {{ if tags }}
     <div class="flex space-x-3 mt-8 text-xs font-semibold tracking-widest uppercase">
@@ -16,11 +16,11 @@
         </div>
     </div>
 
-    <article class="space-y-12 mb-12 content max-w-2xl mx-auto">
+    <article class="space-y-12 mb-12 content mx-auto">
         {{ blog_content }}
     </article>
     {{ if related_posts }}
-    <aside class="border-t-8 border-black my-24 py-8 max-w-2xl mx-auto">
+    <aside class="border-t-8 border-black my-24 py-8 mx-auto">
         <h3 class="text-2xl font-black">Related Posts</h3>
         <div class="grid grid-flow-row grid-cols-2 gap-8 mt-16">
             {{ related_posts }}
