--- a/resources/views/home.antlers.html
+++ b/resources/views/home.antlers.html
@@ -1,4 +1,4 @@
-<div class="max-w-2xl p-8 mx-auto">
+<div class="max-w-7xl py-8 mx-auto">
     <h1 class="font-bold text-5xl mb-8">{{ title }}</h1>
     <div>{{ content }}</div>
 </div>
